# viska

./: .editorconfig  .eslintrc.json  .gitignore  Cargo.toml  Cross.toml  Makefile  README.md  build.gradle  diesel.toml  package.json  rustfmt.toml  settings.gradle
.cargo/: config
.github/workflows/: verify.yml
android/: build.gradle  build.sh
android/src/debug/assets/: demo.realm
android/src/main/: AndroidManifest.xml
android/src/main/java/chat/viska/: LibViska.java
android/src/main/java/chat/viska/android/: ViskaService.java
android/src/main/java/chat/viska/android/chatrooms/: View.java
android/src/main/java/chat/viska/android/main/: Activity.java  ContentView.java  Screen.java  ViewModel.java
android/src/main/java/chat/viska/android/roster/: View.java
android/src/main/java/viska/: Crate.java  LibViska.java  Utils.java
android/src/main/java/viska/android/: Activity.java  ActivityRedirectedException.kt  AppBannerService.kt  Application.java  Application.kt  ApplicationViewModel.java  ChatroomActivity.java  ChatroomActivity.kt  ChatroomListAdapter.java  ConversationAdapter.java  CouchbaseLiveQueryListAdapter.kt  DaemonService.kt  DashboardActivity.kt  EntityDiffer.kt  GlobalState.kt  InstanceActivity.java  InstanceActivity.kt  MainActivity.java  MainScreen.java  MainViewModel.java  Module.java  NewProfileActivity.java  NewProfileActivity.kt  RosterListAdapter.java  ViskaService.java  composable.kt
android/src/main/java/viska/android/chatrooms/: View.java
android/src/main/java/viska/android/main/: Activity.java  ContentView.java  Screen.java  ViewModel.java
android/src/main/java/viska/android/roster/: View.java
android/src/main/java/viska/couchbase/: AndroidPeerRepository.kt  ChatroomService.kt  MessageService.kt  PeerService.kt  QueryToken.kt  VcardService.kt  chatroom.kt  message.kt  package.kt  peer.kt  vcard.kt
android/src/main/java/viska/daemon/: DaemonService.kt  DaemonWrapper.kt  PlatformDaemon.kt
android/src/main/java/viska/database/: BadTransactionException.kt  Blob.java  Chatroom.java  Chatroom.kt  Database.java  Database.kt  DatabaseCorruptedException.kt  Entity.kt  Message.java  Message.kt  NoActiveAccountException.kt  Peer.java  Peer.kt  Profile.java  Profile.kt  ProfileService.kt  TransactionManager.kt  Vcard.java  Vcard.kt  model.kt  package.kt  profile.kt
android/src/main/java/viska/mock_profile/: Module.java
android/src/main/java/viska/util/: Util.kt
android/src/main/res/drawable/: arrow_back.xml  contacts.xml  exit_to_app.xml  forum.xml  icon.xml  menu.xml  person.xml  settings.xml
android/src/main/res/layout/: chatroom.xml  chatroom_list_item.xml  chatrooms.xml  conversation_item.xml  drawer_header.xml  main.xml  main_screen.xml  new_profile.xml  roster_list_item.xml
android/src/main/res/menu/: drawer.xml
android/src/main/res/values/: dimens.xml  ids.xml  strings.xml
android/src/main/riko/viska/: Client.java
android/src/main/riko/viska/core/: Client.java  __Riko_Module.java
android/src/main/riko/viska/mock_profile/: Module.java
android/src/test/java/viska/util/: UtilTest.kt
beacon/: build.gradle
core/: Cargo.toml  Riko.toml  build.rs
core-android/: Cargo.toml
core-android/src/: lib.rs
core-dev/: Cargo.toml
core-dev/examples/: dummy.rs  mock-profile.rs  ping.rs
core-dev/src/: lib.rs
core-dev/tests/: ping.rs
core/examples/: dummy.rs  mock-profile.rs  ping.rs
core/src/: android.rs  changelog.rs  daemon.rs  database.rs  endpoint.rs  event.rs  handler.rs  jni.rs  lib.rs  main.rs  mock_profile.rs  mock_profiles.rs  models.rs  packet.rs  pki.rs  proto.rs  util.rs  utils.rs
core/src/database/: .gitignore  chatroom.rs  message.rs  object.rs  peer.rs  vcard.rs
core/src/database/migration/: genesis.sql
core/tests/: other-async-executor.rs  tests.rs
doc/: database-schema.json  profile-structure.md
electron/: package.json
electron/lib/: database.mjs
gradle/: checkstyle.gradle
grpc/: changelog.proto  common.proto  daemon.proto  database.proto  proto.proto  transaction.proto
migrations/2021-01-13-105428_genesis/: down.sql  up.sql
platform-jvm/: build.gradle
platform-jvm/src/main/kotlin/viska/couchbase/: chatroom.kt  message.kt  package.kt  peer.kt  vcard.kt
platform-jvm/src/main/kotlin/viska/database/: ProfileConfig.kt  ProfileService.kt  package.kt
riko-macros/: Cargo.toml
riko-runtime-java/: build.gradle
riko-runtime-java/src/main/java/riko/: DoubleFreeException.java  UseAfterFreeException.java
riko-runtime-rust/: Cargo.toml
riko-runtime-rust/src/: heap.rs  jni.rs  lib.rs
