[workspace]
members = ["."]

[package]
authors = ["殷啟聰 | Kai-Chung Yan <seamlik@debian.org>"]
description = "Peer-to-peer chatting app hiding inside popular distributed networks"
edition = "2018"
name = "viska"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "lib"]
path = "core/src/lib.rs"

[[test]]
name = "integration-tests"
path = "core/tests/tests.rs"

[features]
android = ["android_logger"]
mock_profiles = []

[dependencies]
android_logger = { version = "0.8.5", optional = true }
blake2 = "0.8.1"
chrono = { version = "0.4.9", features = ["serde"] }
data-encoding = "2.1.2"
derive_more = "0.15"
fake = "2.2.0"
jni = "0.13.1"
itertools = "0.8.0"
lazy_static = "1.4.0"
log = { version = "0.4.8", features = ["max_level_debug", "release_max_level_warn"] }
mime = "0.3.13"
openssl = { version = "0.10.24", features = ["vendored"] }
quinn = "0.3.0"
rand = "0.7"
riko = { git = "https://github.com/seamlik/riko.git" }
riko_runtime = { git = "https://github.com/seamlik/riko.git" }
serde = { version = "1.0.99", features = ["derive"] }
serde_cbor = "0.10.1"
serde_with = "1.3.1"
sled = "0.26.3"
uuid = { version = "0.7.4", features = ["v4"] }

[dev-dependencies]
env_logger = "0.6.2"