[workspace]
members = ["."]

[package]
authors = ["殷啟聰 | Kai-Chung Yan <seamlik@debian.org>"]
description = "Peer-to-peer chatting app hiding inside popular distributed networks"
edition = "2018"
name = "viska"
version = "0.0.1"

[package.metadata.riko]
targets = ["jni"]

[lib]
crate-type = ["cdylib", "lib"]
path = "core/src/lib.rs"

[features]
android = ["android_logger"]
mock_profiles = []

[dependencies]
android_logger = { version = "0", optional = true }
blake2 = "0.8.1"
chrono = { version = "0", features = ["serde"] }
data-encoding = "2.1.2"
derive_more = "0"
fake = "2.2.0"
jni = "0"
itertools = "0"
log = { version = "0.4.8", features = ["max_level_debug", "release_max_level_warn"] }
mime = "0"
once_cell = "1"
openssl = { version = "0", features = ["vendored"] }
rand = "0.7"
riko = { git = "https://github.com/seamlik/riko.git" }
riko_runtime = { git = "https://github.com/seamlik/riko.git" }
serde = { version = "1", features = ["derive"] }
serde_cbor = "0"
serde_with = "1"
sled = "0"
uuid = { version = "0", features = ["v4"] }