[workspace]
members = ["."]

[package]
authors = ["殷啟聰 | Kai-Chung Yan <seamlik@debian.org>"]
description = "Peer-to-peer chatting app hiding inside popular distributed networks"
edition = "2018"
name = "viska"
version = "0.0.1"

[package.metadata.riko]
targets = ["jni"]

[lib]
crate-type = ["cdylib", "lib"]
path = "core/src/lib.rs"

[features]
android = ["android_logger", "riko_runtime/riko_jni"]

[dependencies]
android_logger = { version = "0", optional = true }
blake3 = "0"
chrono = { version = "0", features = ["serde"] }
data-encoding = "2"
jni = "0"
log = { version = "0.4.8", features = ["max_level_debug", "release_max_level_warn"] }
rcgen = "0"
riko = { git = "https://github.com/seamlik/riko.git" }
riko_runtime = { git = "https://github.com/seamlik/riko.git" }
serde = { version = "1", features = ["derive"] }