[package]
edition = "2018"
name = "viska_android"
version = "0.0.1"
publish = false

[package.metadata.riko]
targets = ["jni"]

[lib]
crate-type = ["cdylib"]

[dependencies]
android_logger = "0.8.6"
jni = "0.17"
log = "0.4.8"
quinn = "0.6.1"
riko = { git = "https://github.com/seamlik/riko" }
riko_runtime = { git = "https://github.com/seamlik/riko", features = ["riko_jni"] }
viska = { path = "../core" }