[package]
edition = "2018"
name = "viska_android"
version = "0.0.1"
publish = false

[package.metadata.riko]
targets = ["jni"]

[lib]
crate-type = ["cdylib"]

[dependencies]
android_logger = "0.9"
jni = "0.18"
log = "0.4"
riko = { git = "https://github.com/seamlik/riko" }
riko_runtime = { git = "https://github.com/seamlik/riko" }
riko_runtime_jni = { git = "https://github.com/seamlik/riko" }
libsqlite3-sys = { version = "*", features = ["bundled"] }
viska = { path = "../core" }