[package]
edition = "2018"
name = "viska_dev"
version = "0.0.1"
publish = false

[dependencies]
anyhow = "1"
futures-executor = { version = "0.3", features = ["thread-pool"] }
clap = "2"
rand = "0.8"
tempfile = "3"
viska = { path = "../core" }

[dev-dependencies]
async-std = { version = "1", default-features = false }
env_logger = "0.8"
structopt = "0.3"