[package]
description = "Peer-to-peer chatting app hiding inside popular distributed networks"
edition = "2018"
name = "viska"
version = "0.0.1"

[package.metadata.riko]
targets = ["jni"]

[dependencies]
async-std = "1"
async-trait = "0.1"
chrono = "0.4"
blake3 = { version = "0.3", features = ["pure"] }
diesel = { version = "1", features = ["sqlite"] }
diesel_derives = { version = "1", features = ["sqlite"] }
diesel_migrations = { version = "1", features = ["sqlite"] }
fake = "2"
futures = "0.3"
hex = "0.4"
http = "0"
itertools = "0.10"
jni = "0.18"
libsqlite3-sys = { version = "*", features = ["bundled"] }
log = "0.4"
quinn = "0.6.1"
rand = "0.8"
rcgen = "=0.8.0" # Bug generating bad DER format
riko = { git = "https://github.com/seamlik/riko" }
riko_runtime = { git = "https://github.com/seamlik/riko", features = ["riko_jni"] }
rustls = { version = "0.17", features = ["dangerous_configuration", "quic"]}
serde = { version = "1", features = ["derive"] }
serde_bytes = "0"
tonic = "0.3"
prost = "0.6"
prost-types = "0.6"
thiserror = "1"
tokio = { version = "0.2", features = ["rt-threaded"] }
uuid = { version = "0", features = ["v4"] }
webpki = "0"

[dev-dependencies]
anyhow = "1"
clap = "2"
env_logger = "0"
structopt = "0"
tempfile = "3"
tokio = { version = "0.2", features = ["macros"] }

[build-dependencies]
tonic-build = "0.3"