[package]
description = "Peer-to-peer chatting app hiding inside popular distributed networks"
edition = "2018"
name = "viska"
version = "0.0.1"

[package.metadata.riko]
targets = ["jni"]

[dependencies]
anyhow = "1"
async-fs = "1"
async-trait = "0.1"
chrono = "0.4"
blake3 = { version = "0.3", features = ["pure"] }
diesel = { version = "1", features = ["sqlite"] }
diesel_derives = { version = "1", features = ["sqlite"] }
diesel_migrations = { version = "1", features = ["sqlite"] }
fake = "2"
futures-channel = "0.3"
futures-core = "0.3"
futures-util = "0.3"
hex = "0.4"
http = "0"
itertools = "0.10"
jni = "0.18"
log = "0.4"
quinn = "0.6.1"
rand = "0.8"
rcgen = "=0.8.0" # Bug generating bad DER format
riko = { git = "https://github.com/seamlik/riko" }
riko_runtime = { git = "https://github.com/seamlik/riko" }
riko_runtime_jni = { git = "https://github.com/seamlik/riko" }
rustls = { version = "0.17", features = ["dangerous_configuration", "quic"]}
serde = { version = "1", features = ["derive"] }
serde_bytes = "0"
tempfile = "3"
tonic = "0.4"
prost = "0.7"
prost-types = "0.7"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
tokio_02 = { package = "tokio", version = "0.2", features = ["rt-threaded"] }
uuid = { version = "0", features = ["v4"] }
webpki = "0"

[dev-dependencies]
clap = "2"
env_logger = "0.8"
futures-executor = { version = "0.3", features = ["thread-pool"] }
structopt = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[build-dependencies]
tonic-build = "0.4"